--- a/src/styles.css
+++ b/src/styles.css
@@ -30,7 +30,7 @@ body, html {
   max-width: 100%;
   max-height: 100%;
   background: url("../public/LogoStart.svg") no-repeat bottom;
-  animation: liquid 1.2s 0s ease-out infinite;
+  animation: liquid 1.2s 0s ease-out ;
 }
 
 @keyframes liquid {
@@ -38,6 +38,7 @@ body, html {
 
   
   100% {
+    display: none;
     height: 0px;
     opacity: 0;
   }
@@ -86,24 +87,73 @@ body, html {
 .Startcenter {
 
 }
+
+/*
 .LogoAfterStart {
   position: static;
-  background-color: black;
   width: 1500px;
   height: 431px;
   background: url("../public/LogoPastStart.svg") ;
+  animation: blurAnimation s forwards;
+}*/
+
+.LogoAfterStart {
+  position: relative;
+  width: 70vw; /* Adjust this value as needed */
+  height: 1435px;  /* Maintain aspect ratio */
+  max-width: 100%;
+  max-height: 100%;
+  background: url("../public/LogoPastStart.svg") center/contain no-repeat; /* Center and contain image */
+  /*animation: blurAnimation 2s forwards;*/
 }
+
 
 @keyframes blurAnimation {
   0% {
     filter: blur(0px);
+    opacity: 1;
+  }
+  10% {
+    filter: blur(0px);
+    opacity: 1;
+  }
+  20% {
+    filter: blur(0px);
+    opacity: 1;
+  }
+  30% {
+    filter: blur(0px);
+    opacity: 1;
+  }
+  40% {
+    filter: blur(0px);
+    opacity: 0.95;
   }
   50% {
-    filter: blur(0px);
+    filter: blur(0.5px);
+    opacity: 0.9;
+  }
+  60% {
+    filter: blur(1px);
+    opacity: 0.85;
+  }
+  70% {
+    filter: blur(1.5px);
+    opacity: 0.8;
+  }
+  80% {
+    filter: blur(2px);
+    opacity: 0.75;
+  }
+  90% {
+    filter: blur(2.5px);
+    opacity: 0.70;
   }
   100% {
-    filter: blur(5px);
+    filter: blur(3px);
+    opacity: 0.65;
   }
+  
 }
 
 .Start {
