--- a/src/styles.css
+++ b/src/styles.css
@@ -33,6 +33,17 @@ body, html {
   animation: liquid 1.2s 0s ease-out ;
 }
 
+
+.LogoAfterStart {
+  position: relative;
+  width: 70vw; /* Adjust this value as needed */
+  height: 1435px;  /* Maintain aspect ratio */
+  max-width: 100%;
+  max-height: 100%;
+  background: url("../public/LogoPastStart.svg") center/contain no-repeat; /* Center and contain image */
+  /*animation: blurAnimation 2s forwards;*/
+}
+
 @keyframes liquid {
 
 
@@ -84,6 +95,9 @@ body, html {
   }  
 }
 
+
+
+
 .Startcenter {
 
 }
@@ -96,16 +110,6 @@ body, html {
   background: url("../public/LogoPastStart.svg") ;
   animation: blurAnimation s forwards;
 }*/
-
-.LogoAfterStart {
-  position: relative;
-  width: 70vw; /* Adjust this value as needed */
-  height: 1435px;  /* Maintain aspect ratio */
-  max-width: 100%;
-  max-height: 100%;
-  background: url("../public/LogoPastStart.svg") center/contain no-repeat; /* Center and contain image */
-  /*animation: blurAnimation 2s forwards;*/
-}
 
 
 @keyframes blurAnimation {
@@ -173,11 +177,29 @@ body, html {
 
 
 .BoxStartUp {
-  top: 0;
+  top: 0%;
   background-color: #C25B4B;
 }
 
 .BoxStartDown {
   top: 50%;
   background-color: #C25B4B;
+}
+
+/*
+width: 100,
+height: 100,
+backgroundColor: 'blue',
+position: 'fixed',
+top: 0,
+left: 0,
+*/
+
+.CnmLogo {
+  width: 8%; /* Set width as a percentage */
+  height: 4%; /* Set height as a percentage */
+  background: url("../public/CnmLogo.svg") center/contain no-repeat; /* Center and contain image */
+  position: fixed;
+  top: 1.5%;
+  left: 10%;
 }
