--- a/src/styles.css
+++ b/src/styles.css
@@ -1,205 +1,42 @@
-body, html {
-  overflow: hidden; /* Hide scrollbars */
+html {
+  overflow: hidden;
+}
+
+.container {
+  position: relative;
+  width: 100vw;
+  height: 100vh;
   display: flex;
-  align-items: center;
   justify-content: center;
-  margin: 0;
-  padding: 0;
-  height: 100%;
-  background-color: #D3D3D3;
-
-}
-
-.PosLogoStart{
-  position: relative;
-  top: -31px;
-
-}
-
-
-.LogoStartContrainer {
-  transform: rotate(180deg) ;
-  width: 230px;
-  height: 62px;
-  opacity: 1;
-}
-
-.LogoStart {
-  opacity: 0;
-  left: 50%;
-  max-width: 100%;
-  max-height: 100%;
-  background: url("../public/LogoStart.svg") no-repeat bottom;
-  animation: liquid 1.2s 0s ease-out ;
-}
-
-
-.LogoAfterStart {
-  position: relative;
-  width: 70vw; /* Adjust this value as needed */
-  height: 1435px;  /* Maintain aspect ratio */
-  max-width: 100%;
-  max-height: 100%;
-  background: url("../public/LogoPastStart.svg") center/contain no-repeat; /* Center and contain image */
-  /*animation: blurAnimation 2s forwards;*/
-}
-
-@keyframes liquid {
-
-
-  
-  100% {
-    display: none;
-    height: 0px;
-    opacity: 0;
-  }
-  90% {
-      height: 15px;
-      opacity: 1;
-  }
-  80% {
-      height: 45px;
-      opacity: 1;
-  }
-  70% {
-      height: 65px;
-      opacity: 1;
-  }
-  60% {
-      height: 85px;
-      opacity: 1;
-  }
-  50% {
-      height: 95px;  
-      opacity: 1;
-  } 
-  40% {
-      height: 100px;  
-      opacity: 1;
-  }
-  30% {
-      height: 100px;  
-      opacity: 1;
-  }
-  20% {
-      height: 100px;  
-      opacity: 1;
-  }
-  10% {
-      height: 100px;  
-      opacity: 1;
-  }
-  0% {
-    height: 100px;  
-    opacity: 1;
-  }  
+  align-items: center;
 }
 
 
 
-
-.Startcenter {
-
-}
-
-/*
-.LogoAfterStart {
-  position: static;
-  width: 1500px;
-  height: 431px;
-  background: url("../public/LogoPastStart.svg") ;
-  animation: blurAnimation s forwards;
-}*/
-
-
-@keyframes blurAnimation {
-  0% {
-    filter: blur(0px);
-    opacity: 1;
-  }
-  10% {
-    filter: blur(0px);
-    opacity: 1;
-  }
-  20% {
-    filter: blur(0px);
-    opacity: 1;
-  }
-  30% {
-    filter: blur(0px);
-    opacity: 1;
-  }
-  40% {
-    filter: blur(0px);
-    opacity: 0.95;
-  }
-  50% {
-    filter: blur(0.5px);
-    opacity: 0.9;
-  }
-  60% {
-    filter: blur(1px);
-    opacity: 0.85;
-  }
-  70% {
-    filter: blur(1.5px);
-    opacity: 0.8;
-  }
-  80% {
-    filter: blur(2px);
-    opacity: 0.75;
-  }
-  90% {
-    filter: blur(2.5px);
-    opacity: 0.70;
-  }
-  100% {
-    filter: blur(3px);
-    opacity: 0.65;
-  }
-  
-}
-
-.Start {
-
-}
-
-.RectangleStart {
-  height: 50%;
-  width: 100%;
-  position: fixed;
-  left: 0;
+.rectangle {
+  position: absolute;
+  width: 200px;
+  height: 250px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   font-size: 24px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  color: white;
 }
 
-
-.BoxStartUp {
-  top: 0%;
-  background-color: #C25B4B;
+.arrow-left, .arrow-right {
+  position: absolute;
+  background: none;
+  border: none;
+  font-size: 24px;
+  cursor: pointer;
+  z-index: 10;
 }
 
-.BoxStartDown {
-  top: 50%;
-  background-color: #C25B4B;
+.arrow-left {
+  left: 0;
 }
 
-/*
-width: 100,
-height: 100,
-backgroundColor: 'blue',
-position: 'fixed',
-top: 0,
-left: 0,
-*/
-
-.CnmLogo {
-  width: 8%; /* Set width as a percentage */
-  height: 4%; /* Set height as a percentage */
-  background: url("../public/CnmLogo.svg") center/contain no-repeat; /* Center and contain image */
-  position: fixed;
-  top: 1.5%;
-  left: 10%;
+.arrow-right {
+  right: 0;
 }
