--- a/src/index.css
+++ b/src/index.css
@@ -1,56 +1,19 @@
-
 html {
-  height: 100%;
   overflow: hidden; /* Hide scrollbars */
   background-color: #D3D3D3;
-  -ms-text-size-adjust: 100%;
-  -webkit-text-size-adjust: 100%;
-  
-
 }
 
+/*------------------------------------------------------------------------------------------------*/
 
-body {
-  margin: 0;
-  min-height: 100%;
-  background-color: #fff;
-  font-family: Arial, sans-serif;
-  font-size: 14px;
-  line-height: 20px;
-  color: #333;
-}
-
-.Start {
-  position: relative;
-  overflow: visible;
-  width: 100%;
-  height: 100%;
-  margin-right: auto;
-  margin-left: auto;
-
-}
-
-
-
-/*Logo before Intro/Start*/
-/*MAX*/
+/*Logo au debut au centre qui disparrait vers le bas*/
 
 .LogoCnmStartContainer {
   position: absolute;
-  top: 50%; left: 50%;
+  top: 47.4%; left: 49.9%;
   transform: translateY(-50%);
   transform: translate(-50%, -50%);
-  margin-top: 47.5vh;
+  margin-top: 0vh;
   z-index: 1;
-}
-
-@keyframes translateAnimationMAX {
-  from {
-      transform: translate3d(0px, 0%, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg);
-  }
-  to {
-      transform: translate3d(0px, 140%, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg);
-  }
 }
 
 .LogoCnmStart {
@@ -58,7 +21,6 @@ body {
   height: 5.89vh;
   contain-intrinsic-block-size: auto 100px;
   transform-style: preserve-3d;
-  animation: translateAnimationMAX 0.6s 0.6s ease-out forwards;
   will-change: transform;
 }
 
@@ -67,23 +29,14 @@ body {
 @media screen and (max-width: 2561px) {
   .LogoCnmStartContainer {
     position: absolute;
-    top: 50%; left: 50%;
+    top: 48%; left: 49.9%;
     transform: translateY(-50%);
     transform: translate(-50%, -50%);
-    margin-top: 47.5vh;
+    margin-top: 0vh;
     z-index: 1;
   }
 }
 
-
-@keyframes translateAnimation2561 {
-  from {
-      transform: translate3d(0px, 0%, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg);
-  }
-  to {
-      transform: translate3d(0px, 140%, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg);
-  }
-}
 
 @media screen and (max-width: 2561px) {
 
@@ -92,7 +45,6 @@ body {
     height: 5vh;
     contain-intrinsic-block-size: auto 100px;
     transform-style: preserve-3d;
-    animation: translateAnimation2561 0.6s 0.6s ease-out forwards;
     will-change: transform;
 
   }
@@ -104,23 +56,14 @@ body {
 @media screen and (max-width: 1921px) {
   .LogoCnmStartContainer {
     position: absolute;
-    top: 50%; left: 50%;
+    top: 48.2%; left: 49.9%;
     transform: translateY(-50%);
     transform: translate(-50%, -50%);
-    margin-top: 48vh;
+    margin-top: 0vh;
     z-index: 1;
   }
 }
 
-
-@keyframes translateAnimation1921 {
-  from {
-      transform: translate3d(0px, 0%, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg);
-  }
-  to {
-      transform: translate3d(0px, 140%, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg);
-  }
-}
 
 @media screen and (max-width: 1921px) {
 
@@ -129,7 +72,6 @@ body {
     height: 4vh;
     contain-intrinsic-block-size: auto 100px;
     transform-style: preserve-3d;
-    animation: translateAnimation1921 0.6s 0.6s ease-out forwards;
     will-change: transform;
 
   }
@@ -139,21 +81,11 @@ body {
 @media screen and (max-width: 479px) {
   .LogoCnmStartContainer {
     position: absolute;
-    top: 50%; left: 50%;
+    top: 48.2%; left: 49.9%;
     transform: translateY(-50%);
     transform: translate(-50%, -50%);
-    margin-top: 47.9vh;
+    margin-top: 0vh;
     z-index: 1;
-  }
-}
-
-
-@keyframes translateAnimation479 {
-  from {
-      transform: translate3d(0px, 0%, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg);
-  }
-  to {
-      transform: translate3d(0px, 140%, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg);
   }
 }
 
@@ -164,7 +96,6 @@ body {
     height: 4vh;
     contain-intrinsic-block-size: auto 100px;
     transform-style: preserve-3d;
-    animation: translateAnimation479 0.6s 0.6s ease-out forwards;
     will-change: transform;
 
   }
@@ -198,10 +129,142 @@ body {
 
 }
 /*------------------------------------------------------------------------------------------------*/
+
+/*Logo after Intro/Start*/
+/*MAX*/
+
+.LogoCnmAfterStartContainer {
+  position: absolute;
+  top: 50%; left: 50%;
+  transform: translateY(-50%);
+  transform: translate(-50%, -50%);
+  margin-top: 0vh;
+  z-index: 3;
+}
+
+
+.LogoCnmAfterStart {
+  width: 100vh;
+  height: 30vh;
+  contain-intrinsic-block-size: auto 100px;
+  transform-style: preserve-3d;
+  will-change: transform;
+}
+
+/*2561PX MAX*/
+
+@media screen and (max-width: 2561px) {
+  .LogoCnmAfterStartContainer {
+    position: absolute;
+    top: 50%; left: 50%;
+    transform: translateY(-50%);
+    transform: translate(-50%, -50%);
+    margin-top: 0vh;
+    z-index: 3;
+  }
+}
+
+
+@media screen and (max-width: 2561px) {
+
+  .LogoCnmAfterStart {
+    width: 100vh;
+    height: 20vh;
+    contain-intrinsic-block-size: auto 100px;
+    transform-style: preserve-3d;
+    will-change: transform;
+
+  }
+}
+
+
+/*1921PX MAX*/
+
+@media screen and (max-width: 1921px) {
+  .LogoCnmAfterStartContainer {
+    position: absolute;
+    top: 50%; left: 49%;
+    transform: translateY(-50%);
+    transform: translate(-50%, -50%);
+    margin-top: 0vh;
+    z-index: 3;
+  }
+}
+
+
+@media screen and (max-width: 1921px) {
+
+  .LogoCnmAfterStart {
+    width: 100vh;
+    height: 20vh;
+    contain-intrinsic-block-size: auto 100px;
+    transform-style: preserve-3d;
+    will-change: transform;
+
+  }
+}
+
+/*1441PX MAX*/
+
+@media screen and (max-width: 1441px) {
+  .LogoCnmAfterStartContainer {
+    position: absolute;
+    top: 50%; left: 49%;
+    transform: translateY(-50%);
+    transform: translate(-50%, -50%);
+    margin-top: 0vh;
+    z-index: 3;
+  }
+}
+
+
+@media screen and (max-width: 1441px) {
+
+  .LogoCnmAfterStart {
+    width: 100vh;
+    height: 18vh;
+    contain-intrinsic-block-size: auto 100px;
+    transform-style: preserve-3d;
+    will-change: transform;
+
+  }
+}
+
+
+
+
+/*479PX MAX*/
+@media screen and (max-width: 479px) {
+  .LogoCnmAfterStartContainer {
+    position: absolute;
+    top: 50%; left: 49.0%;
+    transform: translateY(-50%);
+    transform: translate(-50%, -50%);
+    margin-top: 0vh;
+    z-index: 3;
+  }
+}
+
+
+@media screen and (max-width: 479px) {
+
+  .LogoCnmAfterStart {
+    width: 100vh;
+    height: 11vh;
+    contain-intrinsic-block-size: auto 100px;
+    transform-style: preserve-3d;
+    will-change: transform;
+
+  }
+}
+/*------------------------------------------------------------------------------------------------*/
 /*Logo en haut a gauche*/
 
+.ButtonLogoCNMLeftUp {
+  background-color: transparent;
+}
+
 .w-clearfix:before, .w-clearfix:after {
-  content: " ";
   display: table;
   grid-column-start: 1;
   grid-row-start: 1;
@@ -275,133 +338,47 @@ body {
   }
 }
 /*------------------------------------------------------------------------------------------------*/
-/*Logo after Intro/Start*/
-/*MAX*/
+/*Rectangle Mid Formation*/
 
-.LogoCnmAfterStartContainer {
+.containerFormationRectangle {
+  position: relative;
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: -3vh;
+}
+
+
+.FormationRectangle {
   position: absolute;
-  top: 50%; left: 50%;
-  transform: translateY(-50%);
-  transform: translate(-50%, -50%);
-  margin-top: 50vh;
-  z-index: 2;
+  width: 200px;
+  height: 250px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 3;
+
 }
 
-
-.LogoCnmAfterStart {
-  width: 100vh;
-  height: 30vh;
-  contain-intrinsic-block-size: auto 100px;
-  transform-style: preserve-3d;
-  will-change: transform;
+.arrow-left, .arrow-right {
+  position: absolute;
+  background: none;
+  border: none;
+  font-size: 24px;
+  cursor: pointer;
+  z-index: 3;
 }
 
-/*2561PX MAX*/
-
-@media screen and (max-width: 2561px) {
-  .LogoCnmAfterStartContainer {
-    position: absolute;
-    top: 50%; left: 50%;
-    transform: translate(-50%, -50%);
-    margin-top: 49.5vh;
-    z-index: 2;
-  }
+.arrow-left {
+  top: 75vh;
+  left: 89vh;
+  z-index: 4;
 }
 
-
-@media screen and (max-width: 2561px) {
-
-  .LogoCnmAfterStart {
-    width: 100vh;
-    height: 20vh;
-    contain-intrinsic-block-size: auto 100px;
-    transform-style: preserve-3d;
-    will-change: transform;
-
-  }
+.arrow-right {
+  top: 75vh;
+  right: 88vh;
+  z-index: 4;
 }
-
-
-/*1921PX MAX*/
-
-@media screen and (max-width: 1921px) {
-  .LogoCnmAfterStartContainer {
-    position: absolute;
-    top: 50%; left: 50%;
-    transform: translateY(-50%);
-    transform: translate(-50%, -50%);
-    margin-top: 49.5vh;
-    z-index: 2;
-  }
-}
-
-
-@media screen and (max-width: 1921px) {
-
-  .LogoCnmAfterStart {
-    width: 100vh;
-    height: 20vh;
-    contain-intrinsic-block-size: auto 100px;
-    transform-style: preserve-3d;
-    will-change: transform;
-
-  }
-}
-
-/*1441PX MAX*/
-
-@media screen and (max-width: 1441px) {
-  .LogoCnmAfterStartContainer {
-    position: absolute;
-    top: 50%; left: 50%;
-    transform: translateY(-50%);
-    transform: translate(-50%, -50%);
-    margin-top: 49vh;
-    z-index: 2;
-  }
-}
-
-
-@media screen and (max-width: 1441px) {
-
-  .LogoCnmAfterStart {
-    width: 100vh;
-    height: 20vh;
-    contain-intrinsic-block-size: auto 100px;
-    transform-style: preserve-3d;
-    will-change: transform;
-
-  }
-}
-
-
-
-
-/*479PX MAX*/
-@media screen and (max-width: 479px) {
-  .LogoCnmAfterStartContainer {
-    position: absolute;
-    top: 50%; left: 50%;
-    transform: translateY(-50%);
-    transform: translate(-50%, -50%);
-    margin-top: 48.7vh;
-    z-index: 2;
-  }
-}
-
-
-@media screen and (max-width: 479px) {
-
-  .LogoCnmAfterStart {
-    width: 100vh;
-    height: 20vh;
-    contain-intrinsic-block-size: auto 100px;
-    transform-style: preserve-3d;
-    will-change: transform;
-
-  }
-}
-/*------------------------------------------------------------------------------------------------*/
-
-
-
