Ajout du systeme de panier + shop

--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -2,99 +2,94 @@
 
 .ButtonLogoCNMLeftUp {
     background-color: transparent;
-  }
+}
   
-  .w-clearfix:before, .w-clearfix:after {
-    display: table;
-    grid-column-start: 1;
-    grid-row-start: 1;
-    grid-column-end: 2;
-    grid-row-end: 2;
-  }
   
-  .w-clearfix:after {
-    clear: both;
-  }
-  
+.nav {
+  display: flex;
+  position: fixed;
+  left: 0%;
+  top: 0%;
+  right: 0%;
+  padding-top: 40px;
+  padding-right: 50px;
+  padding-left: 50px;
+}
+
+@media screen and (max-width: 767px) {
   .nav {
-    position: fixed;
-    left: 0%;
-    top: 0%;
-    right: 0%;
-    bottom: auto;
-    z-index: 997;
-    padding-top: 40px;
-    padding-right: 50px;
-    padding-left: 50px;
+      padding-top: 20px;
+      padding-right: 30px;
+      padding-left: 30px;
   }
-  
-  @media screen and (max-width: 767px) {
-    .nav {
-        padding-top: 20px;
-        padding-right: 30px;
-        padding-left: 30px;
-    }
-  }
-  
-  
+}
+
+@media screen and (max-width: 767px) {
   .hero-link {
-    display: inline-block;
+      margin-top: 5px;
   }
-  
-  
-  @media screen and (max-width: 767px) {
-    .hero-link {
-        margin-top: 5px;
-    }
+}
+
+
+@media screen and (max-width: 479px) {
+  .hero-link {
+      margin-top: 3px;
   }
-  
-  
-  @media screen and (max-width: 479px) {
-    .hero-link {
-        margin-top: 3px;
-    }
-  }
-  
-  
-  .w-inline-block {
-    max-width: 100%;
-    display: inline-block;
-  }
-  
+}
+
+
+.w-inline-block {
+  max-width: 100%;
+}
+
+.CNM-logo {
+  width: 140px;
+}
+
+@media screen and (max-width: 1441px) {
   .CNM-logo {
     width: 140px;
+    padding-top: 5px;
   }
-  
-  @media screen and (max-width: 1441px) {
-    .CNM-logo {
-      width: 140px;
-      padding-top: 5px;
-    }
+}
+
+@media screen and (max-width: 479px) {
+  .CNM-logo {
+      width: 108px;
   }
-  
-  @media screen and (max-width: 479px) {
-    .CNM-logo {
-        width: 108px;
-    }
-  }
-  
-  
-  /*Plus d'offre en haut a droite*/
-  
-  .MoreProducts {
-    position: absolute;
-    top: 105%;
-    left: 87%;
-    width: 150px;
-    height: 33px;
-    background-color: #C25B4B;
-    margin-top: -4vh;
-    border-radius: 10px;
-    text-align: center;
-  }
-  
-  .MoreProductsText{
-    margin-top: 1.2vh;
-    font-family: 'Alexana';
-    font-size: 13px;
-  }
+}
+
+
+/*Plus d'offre en haut a droite*/
+
+.MoreProducts {
+  position: absolute;
+  top: 105%;
+  left: 87%;
+  width: 150px;
+  height: 33px;
+  background-color: #C25B4B;
+  margin-top: -4.7vh;
+  border-radius: 10px;
+  text-align: center;
+}
+
+.MoreProductsText{
+  margin-top: 1.2vh;
+  font-family: 'Alexana';
+  font-size: 13px;
+  color: #FFFFFF;
+}
+
+.Cart {
+  position: absolute;
+  top: 96.5%;
+  left: 96%;
+  height: 40px;
+  margin-top: -4.7vh;
+  text-align: center;
+}
+
+.CartContainer {
+  background-color: transparent;
+}
