--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,11 @@ html {
   background-color: #D3D3D3;
 }
 
+body {
+  margin: 0;
+  padding: 0;
+}
+
 .ContainerSite {
   position: absolute;
   left: 0;
