--- a/src/pages/shop/formationPrincipal.css
+++ b/src/pages/shop/formationPrincipal.css
@@ -10,8 +10,8 @@
 @media screen and (max-width: 1921px) {
   .FormationRectangle {
     position: absolute;
-    width: 200px;
-    height: 250px;
+    width: 180px;
+    height: 225px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -63,13 +63,29 @@
 }
 
 .arrow-left {
-  top: 75vh;
-  left: 89vh;
+  top: 74vh;
+  left: 79vh;
   z-index: -2;
 }
 
 .arrow-right {
-  top: 75vh;
-  right: 88vh;
+  top: 74vh;
+  right: 78vh;
   z-index: -2;
+}
+
+.sliderFormationP {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  background: transparent;
+}
+
+.imageFormationP {
+  width:100%;
+  height: 100%;
+  object-fit: cover;
+  position: absolute;
+  background: transparent;
 }
