--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@
 
 
 html {
-  background: url("./assets/testecentre.jpg") no-repeat top;
+ /* background: url("./assets/testecentre.jpg") no-repeat top;*/
   background-color: #D3D3D3;
 }
 
@@ -333,7 +333,7 @@ body {
     position: absolute;
     width: 180vh;
     height: 100vh;
-    top: 49%; left: 49%;
+    top: 49%; left: 48.5%;
     transform: translateY(-50%);
     transform: translate(-50%, -50%);
     display: flex;
