--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -18,11 +18,11 @@ a{
 }
 
 .nav {
-  position: relative;
+  position: fixed;
   width: 100%;
   height: 90px;
   display: flex;
-  z-index: 0;
+  z-index: 20;
   flex-direction: row;
   align-items: center;
   justify-content: center;
@@ -89,7 +89,7 @@ a{
   text-align: center;
   width: 150px;
   height: 34px;
-  background-color: #C25B4B;
+  background-color: #D76350;
   border-radius: 10px;
 }
 
