--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,8 @@ html {
 body {
   margin: 0;
   padding: 0;
+  overflow-x: hidden;
+
 }
 
 .ContainerSite {
@@ -143,13 +145,13 @@ body {
 
 .BoxStartUp {
   top: 0%;
-  background-color: #C25B4B;
+  background-color: #C55C4A;
   z-index: 0;
 }
 
 .BoxStartDown {
   top: 50%;
-  background-color: #C25B4B;
+  background-color: #C55C4A;
   z-index: 2;
 
 }
